installdir = $(DATADIR)/neutrino/icons

install_DATA = \
	0.png \
	1.png \
	16_9.png \
	16_9_gray.png \
	2.png \
	3.png \
	4.png \
	5.png \
	6.png \
	7.png \
	8.png \
	9.png \
	ats.png \
	ats_gray.png \
	audio.png \
	bayrisch.png \
	biss_green.png \
	biss_white.png \
	biss_yellow.png \
	blau.png \
	bookmarkmanager.png \
	border_lr.png \
	border_ul.png \
	bosanski.png \
	btn_record_active.png \
	btn_record_inactive.png \
	btn_stop.png \
	ca.png \
	ca2.png \
	ca2_gray.png \
	ch-baslerdeutsch.png \
	ch-berndeutsch.png \
	colors.png \
	conax_green.png \
	conax_white.png \
	conax_yellow.png \
	cw_green.png \
	cw_white.png \
	cw_yellow.png \
	czech.png \
	d_green.png \
	d_white.png \
	d_yellow.png \
	dd.png \
	dd_avail.png \
	dd_gray.png \
	ddfill.png \
	deutsch.png \
	down.png \
	dutch.png \
	ellinika.png \
	english.png \
	error.png \
	features.png \
	file.png \
	folder.png \
	francais.png \
	french.png \
	games.png \
	gelb.png \
	gruen.png \
	help.png \
	help_small.png \
	hidden.png \
	home.png \
	hungarian.png \
	icon_green.png \
	icon_movieplayer.png \
	icon_red.png \
	icon_yellow.png \
	important.png \
	info.png \
	info_small.png \
	information.png \
	ird_green.png \
	ird_white.png \
	ird_yellow.png \
	italiano.png \
	keybinding.png \
	language.png \
	lcd.png \
	left.png \
	local.png \
	lock.png \
	lock_passive.png \
	mainmenue.png \
	menu.png \
	menu_small.png \
	mounted.png \
	movie.png \
	mp_b-skip.png \
	mp_f-skip.png \
	mp_pause.png \
	mp_play.png \
	mp3.jpg \
	mp3.png \
	mp3-0.jpg \
	mp3-1.jpg \
	mp3-2.jpg \
	mp3-3.jpg \
	mp3-4.jpg \
	mp3-5.jpg \
	mp3-6.jpg \
	mp3-7.jpg \
	mute.png \
	mute_small.png \
	mute_zap_gray.png \
	mute_zap_green.png \
	nagra_green.png \
	nagra_white.png \
	nagra_yellow.png \
	nds_green.png \
	nds_white.png \
	nds_yellow.png \
	nederlands.png \
	network.png \
	norsk.png \
	not_mounted.png \
	notyet.png \
	numericpad.png \
	ok.png \
	personalize.png \
	polski.png \
	portugues.png \
	power.png \
	powervu_green.png \
	powervu_white.png \
	powervu_yellow.png \
	radar.pal \
	radar_red.pal \
	radar0.raw \
	radar1.raw \
	radar2.raw \
	radar3.raw \
	radar4.raw \
	radar5.raw \
	radar6.raw \
	radar7.raw \
	radar8.raw \
	radar9.raw \
	radiomode.jpg \
	radiotextget.png \
	radiotextoff.png \
	radiotextwait.png \
	rec.png \
	rec_event_marker.png \
	rec_gray.png \
	recording.png \
	res_000.png \
	res_1080.png \
	res_1280.png \
	res_1440.png \
	res_1920.png \
	res_288.png \
	res_352.png \
	res_382.png \
	res_480.png \
	res_528.png \
	res_544.png \
	res_576.png \
	res_704.png \
	res_720.png \
	res_hd.png \
	res_sd.png \
	right.png \
	romania.png \
	rot.png \
	russkij.png \
	scan.jpg \
	seca_green.png \
	seca_white.png \
	seca_yellow.png \
	settings.png \
	shell.png \
	shutdown.jpg \
	slovak.png \
	softupdate.png \
	start.jpg \
	streaming.png \
	subt.png \
	subt_gray.png \
	suomi.png \
	svenska.png \
	timer.png \
	up.png \
	upnp.png \
	via_green.png \
	via_white.png \
	via_yellow.png \
	video.png \
	volume.png \
	volumebody.png \
	volumeslider2.png \
	volumeslider2alpha.png \
	volumeslider2blue.png \
	volumeslider2green.png \
	volumeslider2red.png \
	vtxt.png \
	vtxt_gray.png \
	x_green.png \
	x_white.png \
	x_yellow.png \
	zap.png

