installdir = $(CONFIGDIR)

install_DATA = \
	flash.start

# install_DATA += \
# 	audioplayer.start \
# 	audioplayer.end \
# 	deepstandby.on \
# 	deepstandby.off \
# 	flash.start \
# 	inactivity.on \
# 	movieplayer.start \
# 	movieplayer.end \
# 	neutrino.start \
# 	pictureviewer.start \
# 	pictureviewer.end \
# 	recording.timer \
# 	recording.start \
# 	recording.end \
# 	standby.on \
# 	standby.off
#
# install-data-hook:
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/audioplayer.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/audioplayer.end
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/deepstandby.on
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/deepstandby.off
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/flash.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/inactivity.on
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/movieplayer.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/movieplayer.end
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/neutrino.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/pictureviewer.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/pictureviewer.end
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.timer
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.start
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/recording.end
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/standby.on
# 	chmod 0755 $(DESTDIR)$(CONFIGDIR)/standby.off

