installdir = $(THEMESDIR)

SUBDIRS = \
	Grey-Blue/icons/buttons \
	Neutrino-3.0/icons/buttons \
	Olive-3.0/icons/buttons

install_DATA = \
	Bluemoon-3.0.theme \
	Classic.theme \
	Crema.theme \
	DVB2000.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	Gray.theme \
	Grey-Blue.theme \
	MonoChrom.theme \
	Neutrino-3.0.theme \
	Olive.theme \
	Olive-3.0.theme \
	Red.theme \
	VirginMedia.theme
