SUBDIRS = \
	Neutrino-3.0/icons/buttons \
	Grey-3.0/icons/buttons \
	Neutrino-3.0/icons/buttons \
	Olive-3.0/icons/buttons

installdir = $(THEMESDIR)

install_DATA = \
	Bluemoon-3.0.theme \
	Classic.theme \
	Crema.theme \
	DVB2000.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	Grey.theme \
	Grey-3.0.theme \
	Grey-Blue.theme \
	MonoChrom.theme \
	Neutrino-3.0.theme \
	Olive.theme \
	Olive-3.0.theme \
	Origin.theme \
	Red.theme \
	VirginMedia.theme
